EUDEV-712 fix spacing on frech pie chart

--- a/modals/modals-2.0.8/modal.scss
+++ b/modals/modals-2.0.8/modal.scss
@@ -432,7 +432,8 @@ p {
 }
   
 .sezzle-hiw-pie-bg .breakdown-row .highlight-breakdown.french + span {
-    font-size: 8px;
+    font-size: 9px;
+    margin-right: -10px;
     color: #382757;
     text-align: center;
 }
